<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/editGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/card_post" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/editGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="close,toolsTop,editPostImg,editMessage,previousText"
        app:layout_constraintBottom_toTopOf="@id/toolsTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="editPostImg,toolsSeparator,editMessage,previousText" />

    <ImageButton
        android:id="@+id/editPostImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:src="@drawable/ic_edit_32"
        app:layout_constraintBottom_toBottomOf="@+id/toolsSeparator" />

    <TextView
        android:id="@+id/editMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/minimal_spacing"
        android:paddingStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/editPostImg"
        app:layout_constraintTop_toBottomOf="@+id/toolsTop"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintBottom_toTopOf="@id/previousText"
        android:text="@string/edit_message"
        android:textColor="#3381B1"
        android:textSize="@dimen/minimal_text"/>
    <TextView
        android:id="@+id/previousText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="Edit text"
        android:singleLine="true"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@+id/editMessage"
        app:layout_constraintStart_toEndOf="@+id/editPostImg"
        app:layout_constraintEnd_toEndOf="@+id/editMessage"
        app:layout_constraintBottom_toTopOf="@id/toolsSeparator"
        android:paddingStart="8dp"
        android:padding="@dimen/minimal_spacing"
        android:textSize="@dimen/minimal_text"/>

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close_32"
        android:layout_marginEnd="@dimen/text_spacing"
        android:layout_marginBottom="@dimen/text_spacing"
        app:layout_constraintBottom_toBottomOf="@+id/toolsSeparator"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="contentEdit,save" />

    <EditText
        android:id="@+id/contentEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolsSeparator" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/contentEdit"
        app:srcCompat="@drawable/ic_save_48" />

</androidx.constraintlayout.widget.ConstraintLayout>
